# Image-Commerce-Gateway

./: .replit  extract_pdf.py  extracted_content.json  extracted_content.txt  main.py  package-lock.json  package.json  pyproject.toml  replit.md
backend/: app.py  dmac.db  requirements.txt
client/: index.html
client/src/: App.tsx  index.css  types.ts
client/src/components/: footer.tsx  navbar.tsx  whatsapp-button.tsx
client/src/pages/: about.tsx  admin.tsx  events.tsx  home.tsx  services.tsx  shop.tsx
server/: app.py  dmac.db  routes.ts  seed.ts  storage.ts
shared/: schema.ts
